# mizar-alpha

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  back_mizar.py  docker-compose.yml  install.ps1  install.sh  main.py  pyproject.toml  requirements.txt
config/: feature_config.yaml  feature_config_coin.yaml  system_config.yaml
docs/: Contributing.md
docs/public/: README.md  深度评估报告说明.md
docs/public/deploy/: 部署指南.md
docs/public/dev/: 贡献者指南.md
docs/public/guides/: API使用指南.md  Mizarα 数据下载与预处理指南.md  快速入门指南.md  泛化预测数据库构建指南.md  策略配置指南.md
docs/public/strategy/: 单点预测实证评估报告.md  回测数据真实分析报告.md  策略回测分析报告.md
docs/public/technical/: Mizarα 回测系统参数配置指南 v0.2.md  技术架构说明.md  算法调优与逻辑规范评估报告.md
mizar/: __init__.py  main.py
mizar/api/: __init__.py  routes.py
mizar/back/: __init__.py  data_loader.py  feature_handler.py  metrics.py  param_presets.py  query_engine.py  strategy.py  strategy_pro.py
mizar/cli/: __init__.py  __main__.py  backtest.py  banner.py  banner_admin.py  commands.py  data_fetcher.py  exporter.py  indicator_calculator.py  local_scan.py  main.py  query_service.py  styles.py
mizar/core/: exceptions.py
mizar/data/: __init__.py  data_loader.py  data_preparer.py  datas_loader.py
mizar/data/tdx/: __init__.py  data_fetcher.py  indicator_calculator.py
mizar/features/: __init__.py  crypto_features.py  feature_engineer.py
mizar/services/: __init__.py  pre_service.py  predict_service.py  prediction_service.py
mizar/utils/: __init__.py  config_loader.py
mizar/vector_db/: __init__.py  storage.py
scripts/: backtest_coin.py  backtest_simple.py  batch_compute_features.py  batch_query_test.py  build_db.py  clean_data.py  cli_predict.py  download_data.py  generate_test_data.py  pack_data.py  transform_data.py  update_db.py  validate_data.py
tests/: conftest.py  test_data_loader.py  test_feature_engineer.py  test_prediction_service.py  test_vector_db.py
