#[build-system]
#requires = ["setuptools>=61.0", "wheel"]
#build-backend = "setuptools.build_meta"

[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mizar-alpha"
version = "0.2.0.dev1"
description = "Mizarα — 基于向量相似性检索的量化策略框架"
readme = "README.md"
authors = [{name = "Chiang Tao", email = "chiangtao_fan@hotmail.com"}]
#license = {text = "Apache-2.0"}
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    # 注意：已删除旧的 License 分类器
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
    "Framework :: Jupyter",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Natural Language :: English",
    "Natural Language :: Chinese (Simplified)",
]
dependencies = [
    # 核心数据处理
    "pandas~=2.3.3",
    "numpy~=2.3.2",
    "PyYAML~=6.0.2",

    # 行情获取
    "TA-Lib==0.6.6",
    "backtesting>=0.6.5",
    # "mootdx==0.11.7",

    # 机器学习与向量检索
    "scikit-learn~=1.7.2",
    "chromadb==1.5.0",

    # 日志与工具
    "loguru~=0.7.3",
    "python-dotenv~=1.1.1",
    "joblib~=1.5.2",
    "requests~=2.32.5",
    "rich~=14.1.0",
    "typer~=0.16.1",
    "plotly>=6.2.0",
    "setuptools>=80.0.0",

    # 可视化
    "matplotlib~=3.10.6",
    "mplfinance~=0.12.10b0",

    # Web API
    "fastapi~=0.135.0",
    "starlette~=1.0.0",
    "pydantic~=2.11.7",
    "uvicorn[standard]~=0.24.0",

    # 底层依赖
    "attrs~=25.3.0",
    "distro~=1.9.0",
    "cryptography~=46.0.7",
    "filelock~=3.19.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
dev = [
    "black>=23.0",
    "isort>=5.12",
    "pipreqs>=0.4",
]

[tool.uv]
override-dependencies = [
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/jiangtaovan/mizar-alpha"
Repository = "https://github.com/jiangtaovan/mizar-alpha"
Issues = "https://github.com/jiangtaovan/mizar-alpha/issues"

[project.scripts]
mizar = "mizar.main:main"

# ============================================================
#  项目溯源防伪标记 (Digital Fingerprint)
#  此部分信息随源码分发，请勿删除或篡改。
# ============================================================
[tool.mizar]
project_uuid = "25da688b-5e73-58ce-83f0-d9f4387632b2"
copyright_year = "2026"
author_pgp_fingerprint = "SHA256:1228ff0c3c9a05ef554ce7ccde488e685192c9e5e4cd3d627dbcbd53f52f2175"
watermark = "MIZAR-ALPHA/CHIANGTAO/2026"
license_statement = "Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0"
